	gekürzt %.?? #sip.)

	Auflösung SIP? zu username@registrar im Telefonbuch, analog zu Vorwahl
	bei normalen Nummmern: Erst "unbehandelte" Nummer nachschlagen, dann
	transformierte 
	Vorteil: Unabhängigkeit von Verschiebungen
	    Analyse von voip.cfg beim Start; Zuordnung SIPx ->
	    "SIP-Adresse" in Variablen, berechnete Namen in Telefonbuch

0.2.3
	* telefon: Wenn telefon nicht (auch) auf localhost lauscht, kann er
	von der Box selbst nicht erreicht werden!! (z.B. vom Webinterface
	(ISDN-Endgeräte)); Dank an carlo65

	* init.d: telefon wird bei 'rc.callmonitor stop' gestartet, auch wenn
	es vorher gar nicht lief

	* init.d: callmonitor wird durch .../bin/telefon gestartet, auch wenn
	vorher nicht lief und ENABLED=no -> try-start oder ähnlich einbauen

	* callmonitor: Standard-Message umbauen (DEST_NAME)

0.2.4
	* phonebook: Bei mehreren parallelen Schreibern sollte nur der letzte
	'modsave flash' aufrufen.

	* phonebook: bei ausgehenden Anrufen (von NT) die angerufene Nummer
	nachschlagen und nicht die eigene (Dank an tzhs)

	* callmonitor: Auch die Variable NT ist nun für die Listener
	verfügbar.

2005-12-10

	* telefon: Neues Paket zur Verwaltung von telefon abgetrennt; telfifo
	erlaubt die Registrierung mehrerer Leser der Ausgabe von telefon

	* telefon: Ungepufferte Ausgabe (Dank an Harald): "telefon 1"

2005-12-17

	* rc.callmonitor: Vorhandensein des telefon-Pakets überprüfen
	* callmonitor.cgi: Debug-Modus über Web-Oberfläche einstellbar

2006-01-01

	* Makefile: Neue Paket-Konvention für ds-0.2 (./root, ./docs)
	* dboxpopup, dboxmessage: Standardnachricht in UTF-8 mit
	Zeilenwechseln statt Kommas (Dank an IngoB)
	* phonebook: Rückwärtssuche ohne Caching möglich (Dank an mode)
	* maint.cgi: Wartungsseite zum Aufräumen des Telefonbuchs
	* phonebook: Löschen von Einträgen (phonebook remove <id>)

	callmonitor-0.5 veröffentlicht

	* controller: Controller mit den gemeinsamen Initialisierungen
	(system.cfg, ...), der dann Applets aufruft
