@@ -1,12 +1,0 @@
-#! /bin/sh
-sed -i -e '
-    /^[[:space:]]*#</,/^[[:space:]]*#>/{
-	p
-	d
-    }
-    s/^[[:space:]]*//
-    /^$/ d
-' "$@" &&
-sed -i -e '
-    /^[[:space:]]*#[#<>]/ d
-' "$@"
